navbar added to other pages

--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ a:hover {
 
 /* CSS for NavBar starts */
 .topnav {
-  background-color: rgb(19, 24, 44);
+  background-color: #042743;
   overflow: hidden;
 }
 
